frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: oraph/frontend:1
          imagePullPolicy: IfNotPresent
          name: frontend
          volumeMounts:
            - name: frontend-config
              mountPath: /app/dist/config.js
              subPath: config.js
      restartPolicy: Always
      volumes:
        - name: frontend-config
          configMap:
            name: frontend-config
