backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: backend
  type: NodePort
