frontend-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  ports:
    - nodePort: 30946
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: frontend
  type: LoadBalancer
