frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - nodePort: 31281
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: frontend
  type: NodePort
