myservice2-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myservice2
  name: myservice2
spec:
  ports:
    - nodePort: 30946
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: myservice2
  type: LoadBalancer
